--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "An API service for market summary app",
   "scripts": {
-    "start": "nodemon --exec babel-node ./src/server.js"
+    "start": "nodemon --exec babel-node ./src/server.js",
+    "lint": "eslint ./src",
+    "lint-fix": "eslint --fix ./src"
   },
   "author": "",
   "license": "ISC",
