--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint ./src",
     "lint-fix": "eslint --fix ./src",
     "start-production": "pm2 start .pm2_config.json",
-    "stop-production": "pm2 stop .pm2_config.json"
+    "stop-production": "pm2 stop .pm2_config.json",
+    "list-pm2": "pm2 list"
   },
   "author": "",
   "license": "ISC",
